--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ cache:
     - vendor/
 
 before_script:
-  - apt-get update -ygg
+  - apt-get update -yqq
   - apt-get install -yqq curl
   - curl -sS https://getcomposer.org/installer | php
   - php composer.phar install
