--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ cache:
 
 before_script:
   - apt-get update -yqq
-  - apt-get install -yqq curl
+  - apt-get install -yqq curl git
   - curl -sS https://getcomposer.org/installer | php
   - php composer.phar install
 
