--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,16 +5,14 @@ cache:
     - vendor/
 
 before_script:
-  - test -d vendor || apt-get update -yqq
-  - test -d vendor || apt-get install -yqq curl git libpq-dev libcurl4-gnutls-dev libicu-dev libvpx-dev libjpeg-dev libpng-dev libxpm-dev zlib1g-dev libfreetype6-dev libxml2-dev libexpat1-dev libbz2-dev libgmp3-dev libldap2-dev unixodbc-dev libsqlite3-dev libaspell-dev libsnmp-dev libpcre3-dev libtidy-dev libonig-dev libzip-dev
-  - test -d vendor || docker-php-ext-install mbstring pdo_pgsql curl intl gd xml zip bz2
-  - test -d vendor || curl -sS https://getcomposer.org/installer | php
-  - test -d vendor || php composer.phar install
+  - apt-get update -yqq
+  - apt-get install -yqq curl
+  - curl -sS https://getcomposer.org/installer | php
+  - php composer.phar install
 
 test:
   script:
     - vendor/bin/phpunit --bootstrap src/autoload.php --colors=never --log-junit phpunit-report.xml tests
-  allow_failure: true
   artifacts:
     when: always
     reports:
